# IChainVote

./: .gitignore  Cargo.toml  README.md  build_did.sh  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/dvote_backend/: Cargo.toml  dvote_backend.did
src/dvote_backend/src/: hash.rs  lib.rs  timestamp.rs  vote.rs
src/dvote_frontend/src/: App.tsx  Create.tsx  Explore.tsx  Header.tsx  Mine.tsx  Vote.tsx  index.html  index.tsx  interface.ts  utils.ts
src/dvote_frontend/src/components/: AuthProvider.tsx  Countdown.tsx  Dialog.tsx  ErrorPage.tsx  Layout.tsx  ListCard.tsx  Processing.tsx  StyledLink.tsx  TimePicker.tsx  Tips.tsx  theme.ts
