[package]
name = "dvote_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9"
ic-cdk = "0.10"
ic-cdk-macros = "0.6.10"
ic-cdk-timers = "0.2.0"  # Feel free to remove this dependency if you don't need timers
md-5 = "0.10.5"
serde = "1.0.167"


[build-dependencies]
ic-cdk-bindgen = "0.1"